# inflation-dashboard

./: .env  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/api/analytics/cpi/: models.py  routes.py  service.py
app/api/data/cpi/: models.py  routes.py  service.py
app/api/data/health/: routes.py
app/dashboards/: mounts.py
app/dashboards/inflation/: dashboard.py
config/: .env
tests/: test_api_analytics.py  test_api_data.py  test_api_health.py
tests/config/test_data/: au-cpi.csv  uk-cpi.csv
